--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.11",
+    "lucide-vue-next": "^0.540.0",
     "vue": "^3.5.17"
   },
   "devDependencies": {
